# abwest

./: .env  .gitignore  .vercelignore  README.md  admin_dashboard.php  config.php  dashboard.php  fix_requirements.ps1  functions.php  get_question.php  index.php  manage.py  package.json  pyproject.toml  requirements.txt  setting.py  setup.py  style.css  uninstall.bat  vercel.json
.github/workflows/: deploy.yml
api/: health.py  index.py  urls.py
backend/app/routes/: quizes.py
core/: models.py  urls.py  views.py
core/management/commands/: seed_database.py
core/temlates/core/base.html/: admin_dashboard.html  base.html  dashboard.html  index.html
core/templates/core/: admin_analytics.html  admin_courses.html  admin_dashboard.html  admin_students.html  admin_users.html  base.html  dashboard.html  index.html  login.html  register.html  student_course_detail.html  student_courses.html  student_progress.html  student_quiz_result.html  student_quizzes.html  student_take_quiz.html
front/: next.config.js
frontend/src/lib/: mongodb.js
project_config/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
